--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,17 @@
 /* Add CSS Styling */
+.odd{
+    background-color: rgb(250, 164, 241);
+    font-family: Verdana, DejaVu Sans, sans-serif;
+}
+#second{
+    color: rgb(0, 0, 255);
+    font-size: 36px;
+}
+.odd.third{
+    font-size: 24px;
+}
+.fourth{
+    background-color: rgb(76, 244, 76);
+    font-size: 24px;
+    font-weight: bold;
+}
