--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,13 +1,13 @@
 /* Add CSS Styling */
 .odd{
     background-color: rgb(250, 164, 241);
-    font-family: Verdana, DejaVu Sans, sans-serif;
+    font-family: Verdana, "DejaVu Sans", sans-serif;
 }
 #second{
     color: rgb(0, 0, 255);
     font-size: 36px;
 }
-.odd.third{
+.third{
     font-size: 24px;
 }
 .fourth{
