--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,12 @@
 /* Add CSS Styling */
+.b1,.b2{
+    font-size: 28px;
+    font-family: Helvetica, "Times New Roman", sans-serif;
+}
+.b1{
+    color: white;
+    background-color: black;
+}
+.b2{
+    background-color: yellow;
+}
