--- a/foundations/cascade/01-cascade-fix/style.css
+++ b/foundations/cascade/01-cascade-fix/style.css
@@ -7,11 +7,11 @@ body {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
 }
-
+/* 
 .small-para {
   font-size: 14px;
   font-weight: 800;
-}
+} */
 
 .para {
   font-size: 22px;
