--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -10,8 +10,31 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  text-align: center;
 }
 
+.container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: auto;
+  margin-top: 30px;
+  gap: 60px;
+}
+
+.items{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 172px;
+  width: auto;
+  /* margin: 10px; */
+}
+.text{
+  text-align: center;
+  width: 193px;
+}
 /* do not edit this footer */
 .footer {
   position: fixed;
