--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,3 +1,6 @@
+/* *{
+  border: 2px solid red;
+} */
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
@@ -8,22 +11,74 @@ body {
   height: 72px;
   background: darkmagenta;
   color: white;
+  font-size: 32px;
+  display: flex;
+  align-items: center;
+  font-weight: bold;
+}
+
+.thing{
+  margin-left: 16px;
 }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .sidebar {
   width: 300px;
   background: royalblue;
   box-sizing: border-box;
+  flex-shrink: 0;
+  padding: 16px;
 }
 
 .card {
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+
+  box-sizing: border-box;
+  height: 190px;
+  width: 333px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.cont{
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: space-between; */
+}
+
+.cont2{
+  display: flex;
+  /* flex-direction: column; */
+  flex: 2;
+  width: 98.5vw;
+}
+
+.cards{
+  display: flex;
+  justify-content: space-around;
+  padding: 40px;
+  flex-wrap: wrap;
+}
+a{
+  text-decoration: none;
+  font-size: 24px;
+  color: white;
+}
+ul{
+  list-style: none;
+  display:flex;
+  flex-direction: column;
+  gap: 16px;
 }
